--- a/frontend/src/components/SideBar/SideBar.css
+++ b/frontend/src/components/SideBar/SideBar.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 600px) and (min-width: 350px) {
     .mobile-sidebar-background {
         width: 100vw;
         height: 100vh;
@@ -16,7 +16,107 @@
         text-decoration: none;
         font-family: 'Fredoka One', cursive;
         font-size: 20px;
+        margin: 0.5rem;
+    }
+
+    .mobile-sidebar-bottom {
+        display: flex;
+    }
+
+    .mobile-sidebar-user {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .mobile-sidebar-profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        bottom: 10rem;
+        text-shadow: 2px 2px 4px blue;
+        font-family: "Architects Daughter", cursive;
+    }
+
+    .username-sidebar > a,
+    .username-sidebar > a:visited {
+        color: yellow;
+        text-decoration: none;
+        font-size: 20px;
         margin: 1rem;
+    }
+}
+
+@media (max-width: 375px) and (min-width: 321px) {
+    .mobile-sidebar-background {
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.2);
+        z-index: 999;
+        position: fixed;
+        top: 0;
+        left: -100vw;
+        /* transition: all 0.2s linear; */
+    }
+
+    .mobile-category-text {
+        color: yellow;
+        text-shadow: 2px 2px 4px blue;
+        text-decoration: none;
+        font-family: 'Fredoka One', cursive;
+        font-size: 20px;
+        margin: 0.5rem;
+    }
+
+    .mobile-sidebar-bottom {
+        display: flex;
+    }
+
+    .mobile-sidebar-user {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .mobile-sidebar-profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        bottom: 5rem;
+        text-shadow: 2px 2px 4px blue;
+        font-family: "Architects Daughter", cursive;
+    }
+
+    .username-sidebar > a,
+    .username-sidebar > a:visited {
+        color: yellow;
+        text-decoration: none;
+        font-size: 20px;
+        margin: 1rem;
+    }
+}
+
+@media (max-width: 320px) {
+    .mobile-sidebar-background {
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.2);
+        z-index: 999;
+        position: fixed;
+        top: 0;
+        left: -100vw;
+        /* transition: all 0.2s linear; */
+    }
+
+    .mobile-category-text {
+        color: yellow;
+        text-shadow: 2px 2px 4px blue;
+        text-decoration: none;
+        font-family: 'Fredoka One', cursive;
+        font-size: 20px;
+        margin: 0.5rem;
     }
 
     .mobile-sidebar-bottom {
